исправления по замечаниям