@@ -7,31 +7,25 @@ import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import ru.yandex.practicum.filmorate.controller.FilmController;
+import ru.yandex.practicum.filmorate.dto.FilmDto;
+import ru.yandex.practicum.filmorate.dto.MpaRatingDto;
 import ru.yandex.practicum.filmorate.dto.NewFilmDto;
 import ru.yandex.practicum.filmorate.dto.UpdateFilmDto;
-import ru.yandex.practicum.filmorate.exception.ErrorHandler;
-import ru.yandex.practicum.filmorate.mapper.FilmMapper;
-import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.MpaRating;
 import ru.yandex.practicum.filmorate.service.FilmService;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 
-import static org.hamcrest.Matchers.containsString;
 import static org.mockito.ArgumentMatchers.any;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(FilmController.class)
-@Import({FilmMapper.class, ErrorHandler.class})
-public class FilmControllerTests {
+class FilmControllerTests {
 
     @Autowired
     private MockMvc mockMvc;
@@ -42,173 +36,146 @@ public class FilmControllerTests {
     @MockBean
     private FilmService filmService;
 
-    private Film film;
+    private FilmDto validFilmDto;
+    private MpaRatingDto validMpaDto;
 
     @BeforeEach
     void setUp() {
-        film = Film.builder()
+        validMpaDto = MpaRatingDto.builder().id(1).name("G").build();
+        validFilmDto = FilmDto.builder()
                 .id(1)
-                .name("Начало")
-                .description("Культовый научно-фантастический триллер")
-                .releaseDate(LocalDate.of(2010, 7, 16))
-                .duration(148)
-                .mpa(MpaRating.PG_13)
+                .name("Interstellar")
+                .description("A team of explorers travel through a wormhole in space.")
+                .releaseDate(LocalDate.of(2014, 11, 7))
+                .duration(169)
+                .mpa(validMpaDto)
                 .genres(new LinkedHashSet<>())
                 .build();
     }
 
     @Test
-    void testFindAllFilms() throws Exception {
-        Mockito.when(filmService.findAll()).thenReturn(List.of(film));
+    void findAll_ShouldReturnOkAndFilmsList() throws Exception {
+        Mockito.when(filmService.findAll()).thenReturn(List.of(validFilmDto));
 
         mockMvc.perform(get("/films"))
                 .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].name").value("Начало"))
-                .andExpect(jsonPath("$[0].duration").value(148));
+                .andExpect(jsonPath("$[0].name").value("Interstellar"));
     }
 
     @Test
-    void testFindFilmById() throws Exception {
-        Mockito.when(filmService.findById(1)).thenReturn(film);
+    void findById_ShouldReturnOkAndFilm_WhenFilmExists() throws Exception {
+        Mockito.when(filmService.findById(1)).thenReturn(validFilmDto);
 
         mockMvc.perform(get("/films/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id").value(1))
-                .andExpect(jsonPath("$.name").value("Начало"));
+                .andExpect(jsonPath("$.name").value("Interstellar"));
     }
 
     @Test
-    void testCreateFilmSuccess() throws Exception {
+    void create_ShouldReturnCreatedAndFilmDto_WhenDataIsValid() throws Exception {
         NewFilmDto newFilmDto = NewFilmDto.builder()
-                .name("Интерстеллар")
-                .description("Фильм про космос")
-                .releaseDate(LocalDate.of(2014, 11, 6))
-                .duration(169)
-                .mpa(MpaRating.PG_13)
+                .name("Inception")
+                .description("A thief who steals corporate secrets through the use of dream-sharing.")
+                .releaseDate(LocalDate.of(2010, 7, 16))
+                .duration(148)
+                .mpa(validMpaDto)
+                .genres(new LinkedHashSet<>())
                 .build();
 
-        Mockito.when(filmService.create(any(Film.class))).thenReturn(film);
+        Mockito.when(filmService.create(any(NewFilmDto.class))).thenReturn(validFilmDto);
 
         mockMvc.perform(post("/films")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(newFilmDto)))
-                .andExpect(status().isOk());
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.id").value(1));
     }
 
     @Test
-    void testCreateFilmValidationFailBlankName() throws Exception {
+    void create_ShouldReturnBadRequest_WhenNameIsBlank() throws Exception {
         NewFilmDto invalidDto = NewFilmDto.builder()
-                .name("   ")
-                .description("Описание")
-                .releaseDate(LocalDate.of(2020, 1, 1))
+                .name(" ")
+                .description("Valid description")
+                .releaseDate(LocalDate.now())
                 .duration(120)
-                .mpa(MpaRating.G)
+                .mpa(validMpaDto)
                 .build();
 
         mockMvc.perform(post("/films")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(invalidDto)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.error").value("Ошибка валидации параметров запроса"))
-                .andExpect(jsonPath("$.description", containsString("name")));
+                .andExpect(status().isBadRequest());
     }
 
     @Test
-    void testCreateFilmValidationFailLongDescription() throws Exception {
+    void create_ShouldReturnBadRequest_WhenDescriptionIsTooLong() throws Exception {
         String longDescription = "a".repeat(201);
-
         NewFilmDto invalidDto = NewFilmDto.builder()
-                .name("Фильм")
+                .name("Valid Name")
                 .description(longDescription)
-                .releaseDate(LocalDate.of(2020, 1, 1))
+                .releaseDate(LocalDate.now())
                 .duration(120)
-                .mpa(MpaRating.G)
+                .mpa(validMpaDto)
                 .build();
 
         mockMvc.perform(post("/films")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(invalidDto)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.description", containsString("description")));
+                .andExpect(status().isBadRequest());
     }
 
     @Test
-    void testCreateFilmValidationFailNegativeDuration() throws Exception {
-        NewFilmDto invalidDto = NewFilmDto.builder()
-                .name("Фильм")
-                .description("Описание")
-                .releaseDate(LocalDate.of(2020, 1, 1))
-                .duration(-10)
-                .mpa(MpaRating.G)
-                .build();
-
-        mockMvc.perform(post("/films")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(invalidDto)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.description", containsString("duration")));
-    }
-
-    @Test
-    void testUpdateFilmSuccess() throws Exception {
-        UpdateFilmDto updateFilmDto = UpdateFilmDto.builder()
+    void update_ShouldReturnOkAndUpdatedFilm_WhenDataIsValid() throws Exception {
+        UpdateFilmDto updateDto = UpdateFilmDto.builder()
                 .id(1)
-                .name("Начало Изменено")
-                .description("Новое описание")
-                .releaseDate(LocalDate.of(2010, 7, 16))
-                .duration(148)
-                .mpa(MpaRating.PG_13)
+                .name("Interstellar Updated")
+                .description("Updated description")
+                .releaseDate(LocalDate.of(2014, 11, 7))
+                .duration(170)
+                .mpa(validMpaDto)
                 .build();
 
-        Mockito.when(filmService.update(any(Film.class))).thenReturn(film);
+        Mockito.when(filmService.update(any(UpdateFilmDto.class))).thenReturn(validFilmDto);
 
         mockMvc.perform(put("/films")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(updateFilmDto)))
+                        .content(objectMapper.writeValueAsString(updateDto)))
                 .andExpect(status().isOk());
     }
 
     @Test
-    void testUpdateFilmValidationFailNoId() throws Exception {
-        UpdateFilmDto invalidDto = UpdateFilmDto.builder()
-                .id(null)
-                .name("Название")
-                .releaseDate(LocalDate.of(2010, 7, 16))
-                .duration(148)
-                .mpa(MpaRating.PG_13)
-                .build();
+    void setLike_ShouldReturnOk() throws Exception {
+        Mockito.doNothing().when(filmService).setLikeFilm(1, 2);
 
-        mockMvc.perform(put("/films")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(invalidDto)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.description", containsString("id")));
-    }
-
-    @Test
-    void testSetLike() throws Exception {
         mockMvc.perform(put("/films/1/like/2"))
                 .andExpect(status().isOk());
-
-        Mockito.verify(filmService, Mockito.times(1)).setLikeFilm(1, 2);
     }
 
     @Test
-    void testDeleteLike() throws Exception {
+    void deleteLike_ShouldReturnOk() throws Exception {
+        Mockito.doNothing().when(filmService).deleteLikeFilm(1, 2);
+
         mockMvc.perform(delete("/films/1/like/2"))
                 .andExpect(status().isOk());
-
-        Mockito.verify(filmService, Mockito.times(1)).deleteLikeFilm(1, 2);
     }
 
     @Test
-    void testGetPopularFilms() throws Exception {
-        Mockito.when(filmService.getFilmsByLikes(5)).thenReturn(Collections.singletonList(film));
+    void getPopularFilms_ShouldReturnOkAndListWithDefaultCount() throws Exception {
+        Mockito.when(filmService.getFilmsByLikes(10)).thenReturn(List.of(validFilmDto));
 
-        mockMvc.perform(get("/films/popular?count=5"))
+        mockMvc.perform(get("/films/popular"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$[0].id").value(1));
+                .andExpect(jsonPath("$.length()").value(1));
+    }
+
+    @Test
+    void getPopularFilms_ShouldReturnOkAndListWithCustomCount() throws Exception {
+        Mockito.when(filmService.getFilmsByLikes(5)).thenReturn(List.of(validFilmDto));
+
+        mockMvc.perform(get("/films/popular").param("count", "5"))
+                .andExpect(status().isOk());
     }
 }
